@@ -1,3 +1,9 @@
+Fri Aug  2 17:44:37 2002  Ossama Othman  <ossama@uci.edu>
+
+	* docs/releasenotes/index.html:
+
+	  Updated security service release notes.
+
 Fri Aug  2 17:27:12 2002  Ossama Othman  <ossama@uci.edu>
 
 	* docs/releasenotes/index.html:
